# vmath

./: .gitignore  CMakeLists.txt  README.md  clean.bat  pip_install_debug.bat  setup.py  test_decompose.py  test_rotation.py  test_vmath.lua  vmath.lua  vmath.py  vmathop.py
misc/: generate_colors.py
src/: glm_util.cpp  glm_util.h  luawrap_vmath.cpp  luawrap_vmath.h  main.cpp  wrap_vmath.cpp  wrap_vmath.h
vmathlib/: vcolor.py  vcolors.py  vutil.py
